[package]
name = "blog_os"
version = "0.1.0"
authors = ["yagehu <yagehu@qq.com>"]
edition = "2018"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
]
test-success-exit-code = 33

[[test]]
name = "should_panic"
harness = false

[dependencies]
bootloader = "0.8.0"
spin = "0.5.2"
uart_16550 = "0.2.0"
volatile = "0.2.6"
x86_64 = "0.9.5"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

